Fix white space at bottom of sticky footer.

--- a/files/assets/css/custom.css
+++ b/files/assets/css/custom.css
@@ -206,7 +206,7 @@ article {
   Sticky Footer
 *************************************/
 .body-content {
-    min-height: calc(100vh - 128px);
+    min-height: calc(100vh - 106px);
 }
 
 #mate-footer {
